overlapping problem solved

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -18,6 +18,10 @@
     font-size: 16px;
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
 
 // variable
 $color-primary:#000000;
@@ -29,6 +33,7 @@ $color-text:#020000;
 
 #menu {
     z-index: 2;
+  
   }
   
   #menu-bar {
@@ -36,6 +41,7 @@ $color-text:#020000;
     height: 40px;
     margin: 30px 0 20px 20px;
     cursor: pointer;
+   
   }
 
 @font-face{
@@ -145,13 +151,16 @@ $color-text:#020000;
      line-height: 35px;
      top: 40%;
      left:10%;
+     
     
   }
 
   .banner-text h1{
-      font-size: 3.5em;
+      font-size: 3em;
       letter-spacing: 6px;
-      line-height: 50px;  
+      line-height: 50px; 
+      text-shadow: 1px 2px 3px $color-ternary;
+    //   font-family: url(/assests/Sophistica\ 1.ttf); 
   }
 
   .banner-text p{
@@ -212,7 +221,8 @@ $color-text:#020000;
      position: relative;
      top: 30%;
      left:10%;
-     width:70%;
+     width:60%;
+     text-align: justify;
  }
 
 #line-img{
@@ -222,6 +232,7 @@ $color-text:#020000;
      font-family: url('/assests/Sophistica\ 1.ttf');
      font-size: 2em;
      letter-spacing: 6px;
+     text-shadow: 1px 1px 3px $color-ternary;
       
  }
 
@@ -285,11 +296,16 @@ button {
 //    my works start
 .works{
     position: relative;
-    height: 80vh;
-    top: 40%;
+    min-height: 80vh;
+    top: 50%;
     left:10%;
     width:80%;
     margin-top: 50px;
+}
+
+.works .my-works-heading{
+position: relative;
+right: 0;
 }
 
 
@@ -298,15 +314,17 @@ button {
 .works h1{
     font-size: 2em;
     letter-spacing: 6px;
+    text-shadow: 1px 1px 3px $color-ternary;
 }
 
 .works>.works-conatiner{
-    margin-top: 50px;
+    margin: 50px 0px;
 }
 
 .works-conatiner>.single-work{
     display: flex;
-    margin-bottom: 50px;
+    
+    
 }
 
 .project-images-container{
@@ -317,7 +335,7 @@ button {
 .project-images-container img{
     display: flex;
     justify-content: space-between;
-    width: 70%;
+    width: 50%;
     border: 1px solid black;
     padding: 5px;
     // transition: img 0.3s ease-in-out;
@@ -330,33 +348,57 @@ button {
 
 .project-info{
     width: 100%;
+    line-height: 10px;
     text-align: right;
+    margin-top: 20px;
+    margin-bottom: 25px;
     // margin-left: -100px;
 }
 .project-info h2{
     font-size: 1.6em;
     letter-spacing: 6px;
+    
 }
 
 .project-info h2 i{
     color: #83A1E9;
+    font-size: 1.3em;
 }
 
 .project-info p{
-    margin: 10px 0px;
+    font-size: 1em;
+    margin: 20px 0px;
     letter-spacing: 3px;
     
 }
 
 .project-info .icons i{
-margin: 5px;
-transition: all 0.3s ease-in-out;
+    margin: 5px;
+    transition: all 0.3s ease-in-out;
 }
 
 .project-info .icons i:hover{
     color: $color-ternary;
     transform: scale(1.2);
 }
+
+
+// my blogs
+.blogs{
+    position: relative;
+    height: 80vh;
+    top: 70%;
+    left:10%;
+    width:80%;
+    margin-top: 50px;
+}
+
+.blogs h1{
+    font-size: 2em;
+    letter-spacing: 6px;
+    text-shadow: 1px 1px 3px $color-ternary;
+}
+
 
 
 
@@ -367,13 +409,21 @@ transition: all 0.3s ease-in-out;
         width: 90%;
     }
 
+    .banner, .about-me, .works{
+        left: 5;
+    }
+
+    
+
 
     .project-info{
         text-align: left;
+        line-height: normal;
     }
 
     .works-conatiner>.single-work{
         flex-direction: column;
+        margin-bottom: 50px;
         
     }
 
